[package]
name = "complete-pic"
version = "0.1.0"
edition = "2021"
authors = ["akabinds <bindsdev@gmail.com>"]
repository = "https://github.com/akabinds/complete-pic"
homepage = "https://github.com/akabinds/complete-pic"
description = "A complete interface for the legacy 8259 PIC and the newer APIC."
readme = "README.md"
license = "MIT"
keywords = ["no_std", "os", "osdev", "x86", "x86-64"]
categories = ["no_std"]
exclude = ["./.github/*"]

[dependencies]
x86_64 = { version = "0.14.10", default-features = false, features = ["instructions"] }

[features]
default = ["apic"]

# Enable interface for the legacy 8259 PIC (not on by default)
8259pic = []

# Enable interface for the newer APIC (enabled by default; crate assumes you want to use the more modern variant)
apic = []
