[package]
name = "complete-pic"
version = "1.0.0"
edition = "2021"
authors = ["binds <bindsdev@gmail.com>"]
repository = "https://github.com/akabinds/complete-pic"
homepage = "https://github.com/akabinds/complete-pic"
description = "A complete interface for the legacy 8259 PIC and the newer APIC."
readme = "README.md"
license = "MIT"
keywords = ["no_std", "os", "osdev", "x86", "x86-64"]
categories = ["no-std", "no-std::no-alloc", "hardware-support"]
exclude = ["./.github/*"]

[dependencies]
bit_field = "0.10.2"
bitflags = "2.4.0"
volatile = "0.5.1"
x86_64 = { version = "0.14.10", default-features = false, features = ["instructions"] }

[features]
# Enable interface for the legacy 8259 PIC.
8259pic = []

# Enable interface for the newer APIC.
apic = []

[package.metadata.docs.rs]
all-features = true
