[package]
name = "complete-pic"
version = "0.3.1"
edition = "2021"
authors = ["binds <bindsdev@gmail.com>"]
repository = "https://github.com/akabinds/complete-pic"
homepage = "https://github.com/akabinds/complete-pic"
description = "A complete interface for the legacy 8259 PIC and the newer APIC."
readme = "README.md"
license = "MIT"
keywords = ["no_std", "os", "osdev", "x86", "x86-64"]
categories = ["no-std", "no-std::no-alloc", "hardware-support"]
exclude = ["./.github/*"]

[dependencies]
x86_64 = { version = "0.15.1", default-features = false, features = ["instructions"] }

[features]
default = ["apic"]

# Enable interface for the legacy 8259 PIC (not on by default)
8259pic = []

# Enable interface for the newer APIC (enabled by default; crate assumes you want to use the more modern variant)
apic = []

[package.metadata.docs.rs]
all-features = true
